# windivvun-service

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  build.rs  build_installers.bat  currentuser.reg  install.bat  install.iss  localmachine.reg
.github/workflows/: build.yml
installer/: installer_dictionary.iss  installer_spell_checker.iss
src/: lib.rs  main.rs  spellcheckprovider.rs  speller_cache.rs  speller_repository.rs  util.rs  wordlists.rs
src/impl/: EnumSpellingError.rs  SpellCheckProvider.rs  SpellCheckProviderFactory.rs
src/spell_impl/: ClassFactory.rs  EnumSpellingError.rs  EnumString.rs  SpellCheckProvider.rs  SpellCheckProviderFactory.rs  mod.rs
