[package]
name = "windivvun"
description = "Windows spell checking service for DivvunSpell spellers"
version = "1.2.1"
authors = [
    "Eike Siewertsen <eike@technocreatives.com>",
    "Brendan Molloy <brendan@bbqsrc.net>",
]
license = "Apache-2.0 OR MIT"
edition = "2018"

[lib]
name = "windivvun"
crate-type = ["dylib"]

[dependencies]
log = "0.4.11"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
log4rs = "0.13.0"
pathos = "0.1.7"

[dependencies.com-impl]
git = "https://github.com/bbqsrc/com-impl-rs"

[dependencies.winapi]
version = "0.3.9"
features = ["winerror", "unknwnbase", "objbase", "oleauto", "winerror", "shlobj", "shtypes", "combaseapi", "knownfolders", "winuser", "winnls"]

[dependencies.divvunspell]
git = "https://github.com/divvun/divvunspell"
branch = "master"
features = ["compression"]

[build-dependencies.winapi-tlb-bindgen]
git = "https://github.com/divvun/winapi-tlb-bindgen"
