[package]
name = "windivvun"
description = "Windows spell checking service for DivvunSpell spellers"
version = "1.4.7"
authors = [
    "Eike Siewertsen <eike@technocreatives.com>",
    "Brendan Molloy <brendan@bbqsrc.net>",
]
license = "Apache-2.0 OR MIT"
edition = "2018"

[lib]
name = "windivvun"
crate-type = ["dylib"]

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.0"
pathos = "0.3.0-pre.3"
chrono = "0.4.15"
anyhow = "1.0.32"
eventlog = "0.1.0"
tracing = "0.1.19"
tracing-subscriber = { version = "0.2.11", features = ["fmt"] }
whoami = "1.1.2"

[dependencies.com-impl]
git = "https://github.com/bbqsrc/com-impl-rs"

[dependencies.winapi]
version = "0.3.9"
features = ["winerror", "unknwnbase", "objbase", "oleauto", "winerror", "shlobj", "shtypes", "combaseapi", "knownfolders", "winuser", "winnls"]

[dependencies.divvunspell]
git = "https://github.com/divvun/divvunspell"
branch = "main"
features = ["compression"]

[build-dependencies.winapi-tlb-bindgen]
git = "https://github.com/divvun/winapi-tlb-bindgen"
